# Neutron

./: CMakeLists.txt  Neutron_Design_Document.docx
assets/shaders/: Simple2D.frag  Simple2D.vert
examples/Sandbox/: CMakeLists.txt  main.cpp
include/Neutron/Core/: Window.h
include/Neutron/ECS/: ComponentManager.h  EntityManager.h  System.h
include/Neutron/ECS/Component/: AnimationComponent.h  SpriteComponent.h  TransformComponent.h  VelocityComponent.h
include/Neutron/ECS/Systems/: AnimationSystem.h  MovementSystem.h
include/Neutron/Input/: Input.h
include/Neutron/Renderer/: Camera2D.h  Renderer.h  Shader.h  SpriteRenderer.h  Texture2D.h
src/Neutron/Core/: Window.cpp
src/Neutron/ECS/: EntityManager.cpp
src/Neutron/ECS/Systems/: AnimationSystem.cpp
src/Neutron/Input/: Input.cpp
src/Neutron/Renderer/: Camera2D.cpp  Renderer.cpp  Shader.cpp  SpriteRenderer.cpp  Texture2D.cpp
